log
Thu 16 May 2024 03:16:42 PM UTC: 
 tests:  0|5
total_score: 0/70
334d81b
Thu 16 May 2024 03:18:05 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:27: error: unused variable ‘adj’ [-Werror=unused-variable]
   60 |                     Node* adj=copy(n);
      |                           ^~~
cc1: all warnings being treated as errors
Compilation failed
f402429
Thu 16 May 2024 03:18:31 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
b273409
Thu 16 May 2024 03:21:08 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  2|4
total_score: 15/70
a650520
Thu 16 May 2024 03:21:26 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
48fed0e
Thu 16 May 2024 03:30:21 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘cuadro’ [-Werror=unused-variable]
   50 |    int *cuadro = (int*) calloc(9,sizeof(int));
      |         ^~~~~~
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
910108a
Thu 16 May 2024 03:31:18 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3582d27
Thu 16 May 2024 03:32:22 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
27ba6ef
Thu 16 May 2024 03:39:13 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:13: error: unused variable ‘n’ [-Werror=unused-variable]
  130 |       Node* n = top(s);
      |             ^
sudoku.c:126:10: error: unused variable ‘j’ [-Werror=unused-variable]
  126 |    int i,j ;
      |          ^
sudoku.c:126:8: error: unused variable ‘i’ [-Werror=unused-variable]
  126 |    int i,j ;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
6fc0615
Thu 16 May 2024 03:40:23 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:13: error: unused variable ‘n’ [-Werror=unused-variable]
  129 |       Node* n = top(s);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
50f02b3
